# simplewebserver

./: Cargo.toml  README.md
.github/workflows/: CI.yaml  release.yaml
assets/: example-1.webm
src/: lib.rs  main.rs  util.rs
tests/: integration.rs
tests/cli-test-env/: file1-1.txt  file1-2.txt
tests/cli-test-env/dir2/: file2-1.txt
tests/cli-test-env/dir2/dir3/: file3-1.txt
