[package]
name = "simplewebserver"
description = "Run a tiny HTTP server from the command line"
readme = "README.md"
repository = "https://github.com/L-french/simplewebserver"
license = "MIT"
keywords = ["cli", "http", "web"]
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["net", "macros", "rt-multi-thread", "fs"]}
hyper = {version = "0.14", features = ["server", "http1", "http2", "tcp"]}
clap = "2"

[dev-dependencies]
assert_cmd = "2.0"
