[package]
name = "simplewebserver"
description = "Run a tiny HTTP server from the command line"
readme = "README.md"
authors = ["Lynn French"]
repository = "https://github.com/L-french/simplewebserver"
license = "MIT"
keywords = ["cli", "http", "web"]
categories = ["command-line-utilities"]
version = "0.1.1"
edition = "2021"
exclude = ["assets/*"]

[dependencies]
tokio = {version = "1", default-features = false, features = ["net", "macros", "rt-multi-thread", "fs"]}
hyper = {version = "0.14", default-features = false, features = ["server", "http1", "http2", "tcp"]}
clap = "2"
log = "^0.4"
flexi_logger = {version = "0.22.0", default-features = false, features = ["colors"]}

[dev-dependencies]
assert_cmd = "2.0"
